Changelog
=========

4.7-dev - (unreleased)
----------------------

4.6 - (2013-06-17)
------------------
* Change: updated link to site setup
  [ghicale]

4.5 - (2013-02-04)
------------------
* Bug Fix: Fixed to work with the 2.4 API
  [batradav refs #9551]

4.4 - (2012-07-13)
------------------
* Bug Fix: Fixed i18n missing tags in .pt files
  [prospchr refs #5160]

4.3 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]

4.2 - (2012-02-06)
------------------
 * No changes

4.0 - (2011-11-07)
------------------
* Cleanup: of pylint, pyflakes warnings
  [ichimdav #4140, #4141]
* Feature: added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible release
  [ghicaale #4212]

1.2 (2010-02-24)
----------------
* Bug fix: fixed stinky egg
  [ghicale]

1.1 (2010-02-24)
----------------
* Bug fix: fixed layout in edit mode
  [voineali #2685]

1.0 (2009-11-09)
----------------
* Initial release
  [voineali]
